forgejo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo-tls-ingress
  namespace: forgejo
  labels:
    app.kubernetes.io/name: forgejo-tls-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: git.${DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: forgejo
                port:
                  number: 3000
  tls:
    - hosts:
        - git.${DOMAIN}
      secretName: forgejo-tls
